<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/vToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:elevation="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_action_back"
                app:tint="@color/colorBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/colorBlue"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="6dp"-->
<!--        android:background="@drawable/shadow"-->
<!--        android:rotation="180"-->
<!--        app:layout_constraintTop_toBottomOf="@id/vToolbar" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblAboutTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_app_title"
                android:textColor="@color/textColorWhiteSemitransparent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lblAboutSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_site"
                android:textColor="@color/textColorWhiteSemitransparent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lblAboutWhitePaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_white_paper"
                android:textColor="@color/textColorWhiteSemitransparent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lblAboutVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_version"
                android:textColor="@color/textColorWhiteSemitransparent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lblAboutTechPaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_tech"
                android:textColor="@color/textColorWhiteSemitransparent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lblAboutTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_terms"
                android:textColor="@color/textColorWhiteSemitransparent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lblAboutPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_privacy"
                android:textColor="@color/textColorWhiteSemitransparent"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>