<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryLight">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_confirmation"
        android:textColor="@color/colorBlue"
        android:textSize="22sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <View
        android:id="@+id/titleDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/lblAmountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/titleDivider"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/lblAmountVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:text=""
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/lblAmountTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/lblAmountCur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enq"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@id/lblAmountVal"
        app:layout_constraintTop_toBottomOf="@id/lblAmountTitle" />

    <TextView
        android:id="@+id/lblAddressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enq_address_to_send"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblAmountVal" />

    <TextView
        android:id="@+id/lblAddressVal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblAddressTitle" />

    <TextView
        android:id="@+id/btnReject"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/pill_dark_fill_light_stroke"
        android:gravity="center"
        android:text="@string/reject"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/lblAddressVal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnConfirm"/>

    <TextView
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/pill_blue"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/lblAddressVal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnReject"/>

    <View
        android:id="@+id/vDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/btnConfirm"
        android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>