<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/enq_title_big"
        app:layout_constraintBottom_toTopOf="@id/lblUpdateTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/lblUpdateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:lines="1"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/update_required"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:theme="@style/AccentTheme"
        app:layout_constraintBottom_toTopOf="@id/lblUpdateDescription"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/lblUpdateDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/critical_update_description"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:theme="@style/AccentTheme"
        app:layout_constraintBottom_toTopOf="@id/btnUpdate"
        app:layout_constraintTop_toBottomOf="@id/lblUpdateTitle"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/pill_accent"
        android:gravity="center"
        android:text="@string/update_now"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblUpdateDescription"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>