<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/vToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:elevation="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_action_back"
                app:tint="@color/colorBlack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_key"
                android:textColor="@color/colorBlue"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="6dp"-->
<!--        android:background="@drawable/shadow"-->
<!--        android:rotation="180"-->
<!--        app:layout_constraintTop_toBottomOf="@id/vToolbar" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/vToolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rectangle_round_settings"
            android:theme="@style/AccentTheme"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/lblSecretKey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                android:ellipsize="end"
                android:focusable="false"
                android:gravity="center_horizontal"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/textColorWhiteSemitransparent"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btnCopy"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="96dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="96dp"
            android:background="@drawable/pill_blue"
            android:gravity="center"
            android:text="@string/copy"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btnImportWallet"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="96dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="96dp"
            android:background="@drawable/pill_blue"
            android:gravity="center"
            android:text="@string/import_wallet"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>